--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_native_splash: ^2.4.4
   math_expressions: ^2.6.0
   syncfusion_flutter_calendar: ^28.2.7
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
