--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   hive_flutter: ^1.1.0
   table_calendar: ^3.2.0
   fl_chart: ^0.63.0
+  mailer: ^6.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
