--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   table_calendar: ^3.2.0
   fl_chart: ^0.63.0
   mailer: ^6.0.0
+  local_auth: ^2.1.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
