--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   fl_chart: ^0.63.0
   mailer: ^6.0.0
   local_auth: ^2.1.5
-
+  path_provider: ^2.1.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -56,7 +56,6 @@ dev_dependencies:
   flutter_launcher_icons: ^0.14.3
   hive_generator: ^1.1.3
   build_runner: ^2.1.11
-  path_provider: ^2.1.2
   intl: ^0.20.2
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -64,6 +63,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  excel: ^2.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
