--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,12 +11,13 @@ android {
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
+        coreLibraryDesugaringEnabled true
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+        jvmTarget = "17"
     }
 
     defaultConfig {
@@ -40,7 +41,7 @@ flutter {
 
 dependencies {
     implementation 'com.google.firebase:firebase-analytics' 
-    // Other Firebase dependencies
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:2.0.4"
 }
 
-apply plugin: 'com.google.gms.google-services'  // Apply the plugin here
+apply plugin: 'com.google.gms.google-services'
