--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,6 @@ dependencies:
   math_expressions: ^2.6.0
   syncfusion_flutter_calendar: ^28.2.7
   shared_preferences: ^2.5.2
-  flutter_local_notifications: ^19.1.0
 
 dev_dependencies:
   flutter_test:
@@ -79,7 +78,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/loading_logo_2.png
+    - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
